--- a/DevOpsPlatform/DevOpsPlatform.csproj
+++ b/DevOpsPlatform/DevOpsPlatform.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebHooks.Receivers.GitHub" Version="1.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
